--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,10 +7,12 @@
             <h1><a href="">Sascha's Blog</a></h1>
         </div>
 
-	<div>
-	    <p>published: 09.03.2015, 15:26</p>
-	    <h2><a href="">My first post</a></h2>
-	    <p>Hello Wörld!</p>
-	</div>
+	{% for post in posts %}
+	    <div>
+		<p>published: {{ post.published_date }}</p>
+		<h1><a href="">{{ post.title }}</a></h1>
+		<p>{{ post.text|linebreaks }}</p>
+	    </div>
+	{% endfor %}
     </body>
 </html>
