--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,33 +1,13 @@
-{% load staticfiles %}
+{% extends 'blog/base.html' %}
 
-<html>
-    <head>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-	<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-        <title>Sascha's blog</title>
-    </head>
-    <body>
-	<div class="page-header">
-    	    <h1><a href="/">Sascha's Blog</a></h1>
-	</div>
-
-
-	<div class="content container">
-	    <div class="row">
-	        <div class="col-md-8">
-	            {% for post in posts %}
-	                <div class="post">
-	                    <div class="date">
-	                        <p>published: {{ post.published_date }}</p>
-	                    </div>
-	                    <h1><a href="">{{ post.title }}</a></h1>
-	                    <p>{{ post.text|linebreaks }}</p>
-	                </div>
-	            {% endfor %}
-	        </div>
-	    </div>
-	</div>
-    </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaks }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
