--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,14 +2,17 @@
 
 <html>
     <head>
+	<title>myBLOG</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-        <title>myBLOG</title>
     </head>
     <body>
         <div class="page-header">
+	    {% if user.is_authenticated %}
+	        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+	    {% endif %}
             <h1><a href="/">myBLOG</a></h1>
         </div>
         <div class="content container">
@@ -21,5 +24,4 @@
             </div>
         </div>
     </body>
-</html>
 
